# he-benchmark

./: .gitignore  LIMITATIONS.md  README.md  RUN_COMMANDS.md  SERVER_SETUP.md  TEST_PLAN.md  generate_corpus.sh  generate_he_corpus.py  run_benchmarks.py  setup_venv.sh
cpp/: CMakeLists.txt
cpp/common/: allocation_tracker.hpp  benchmark_args.hpp  ckks_compare.hpp  ckks_config.hpp  csv_reader.hpp  depth_compare.hpp  exact_compare.hpp  memory_usage.hpp  throughput.hpp  timer.hpp
cpp/openfhe/: openfhe_bfv_exact.cpp  openfhe_bfv_rotation.cpp  openfhe_bfv_serialization.cpp  openfhe_bfv_throughput.cpp  openfhe_bgv_exact.cpp  openfhe_ckks.cpp  openfhe_ckks_depth.cpp  openfhe_ckks_dot.cpp  openfhe_ckks_e2e.cpp  openfhe_ckks_matrix.cpp  openfhe_ckks_memory.cpp  openfhe_ckks_rotation.cpp  openfhe_ckks_serialization.cpp  openfhe_ckks_throughput.cpp  openfhe_exact_depth.cpp  openfhe_exact_dot.cpp  openfhe_exact_e2e.cpp  openfhe_exact_matrix.cpp  openfhe_exact_memory.cpp  openfhe_keyswitch.cpp  openfhe_lowlevel.cpp  openfhe_resource.cpp
cpp/results/: README.md
cpp/seal/: seal_bfv_exact.cpp  seal_bfv_rotation.cpp  seal_bfv_serialization.cpp  seal_bfv_throughput.cpp  seal_bgv_exact.cpp  seal_ckks.cpp  seal_ckks_depth.cpp  seal_ckks_dot.cpp  seal_ckks_e2e.cpp  seal_ckks_matrix.cpp  seal_ckks_memory.cpp  seal_ckks_rotation.cpp  seal_ckks_serialization.cpp  seal_ckks_throughput.cpp  seal_exact_depth.cpp  seal_exact_dot.cpp  seal_exact_e2e.cpp  seal_exact_matrix.cpp  seal_exact_memory.cpp  seal_keyswitch.cpp  seal_lowlevel.cpp  seal_resource.cpp
